# sumeh_dq

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.rst  mkdocs.yml  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: authors.md  conf.py  contributing.md  index.md  index.rst  installation.md  installation.rst  modules.md  usage.md  usage.rst
src/sumeh_dq/: __init__.py  sumeh_dq.py
src/sumeh_dq/configs/: config_parser.py
src/sumeh_dq/services/: config_parser.py  utils.py
tests/: test_sumeh_dq.py
tests/mock/: config_tests.csv  mock_data.csv  test.csv
