[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sumeh_dq"
version = "0"
description = "Sumeh is a project designed to extend the functionality of the Cuallee library by enabling the use of configuration"
readme = "README.rst"
authors = [
  {name = "Demetrius Albuquerque", email = "demetrius.albuquerque@yahoo.com.br"}
]
maintainers = [
  {name = "Demetrius Albuquerque", email = "demetrius.albuquerque@yahoo.com.br"}
]
classifiers = [

]
license = {text = "BSD license"}
dependencies = [
    "cuallee >= 0.14.1",
    "python-dateutil"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

aws = [
    "boto3"
]
mysql = [
    "mysql-connector-python"
]

postgresql = [
    "psycopg2-binary"
]

bigquery = [
    "google-cloud-bigquery"
]

[project.urls]

bugs = "https://github.com/maltzsama/sumeh_dq/issues"
changelog = "https://github.com/maltzsama/sumeh_dq/blob/master/changelog.md"
homepage = "https://github.com/maltzsama/sumeh_dq"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
